--- a/src/styles.css
+++ b/src/styles.css
@@ -19,13 +19,111 @@ img {
 }
 
 .footer {
-  width: 375px;
+  /* width: 375px;
   /* height: 588px; */
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   background: #242424;
+  /* padding-left: 20px;
+  padding-right: 20px; */
+}
+.footer-container {
+  padding-right: 15px;
+  padding-left: 15px;
+
+  margin: 0 auto;
+  max-width: 100%;
 }
 
-.input-form {
+.footer-logo {
+}
+
+.footer-title {
+  width: 335px;
+  color: #f4f4f4;
+  font-family: Neue Montreal;
+  font-size: 40px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: -0.8px;
+  margin-bottom: 20px;
+}
+
+.footer-text-1 {
+  color: #f4f4f4;
+  font-family: Neue Montreal;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+  padding: 0;
+  margin-bottom: 20px;
+}
+.footer-label {
+}
+
+.footer-input-form {
   border-radius: 30px;
   border: 1px solid #f4f4f4;
+  background: transparent;
+  width: 335px;
+  height: 42px;
+  margin-bottom: 20px;
+}
+.footer-input-form::placeholder {
+  padding-left: 12px;
+}
+
+.footer-btn {
+  padding: 12px 152px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 30px;
+  background: #f4f4f4;
+}
+.footer-text-2 {
+  color: #c6cdd1;
+  padding: 0;
+  margin: 0;
+  font-family: Neue Montreal;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+  letter-spacing: -0.28px;
+}
+
+.footer-link {
+  color: #c6cdd1;
+
+  text-align: right;
+  font-family: Neue Montreal;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.28; /* 128.571% */
+  letter-spacing: -0.28px;
+}
+.text-container-1 {
+  max-width: 335px;
+  margin-top: 100px;
+  padding-bottom: 20px;
+}
+.text-container-2 {
+  width: 335px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer-text-3 {
+  margin-left: 95px;
+  color: #c6cdd1;
+
+  font-family: Neue Montreal;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+  letter-spacing: -0.28px;
 }
