--- a/src/styles.css
+++ b/src/styles.css
@@ -19,12 +19,7 @@ img {
 }
 
 .footer {
-  /* width: 375px;
-  /* height: 588px; */
-  /* flex-shrink: 0; */
   background: #242424;
-  /* padding-left: 20px;
-  padding-right: 20px; */
 }
 .footer-container {
   padding-right: 15px;
@@ -35,6 +30,10 @@ img {
 }
 
 .footer-logo {
+}
+.footer-list-soc {
+  display: flex;
+  gap: 20px;
 }
 
 .footer-title {
@@ -126,4 +125,10 @@ img {
   font-weight: 400;
   line-height: 18px; /* 128.571% */
   letter-spacing: -0.28px;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1440px) {
 }
