--- a/src/styles.css
+++ b/src/styles.css
@@ -23,8 +23,8 @@ img {
   background: #242424;
 }
 .footer-container {
-  margin: auto;
   max-width: 335px;
+  margin: auto;
 }
 .footer-conteiner-logo {
   padding-top: 40px;
@@ -49,7 +49,7 @@ img {
   margin-bottom: 20px;
 }
 .footer-form-container {
-  min-width: 335px;
+  /* min-width: 335px; */
 }
 
 .footer-text-1 {
@@ -71,7 +71,7 @@ img {
   border: 1px solid #f4f4f4;
   background: transparent;
   width: 333.4px;
-  height: 42px;
+  height: 40.4px;
   margin-bottom: 20px;
 }
 .footer-input-form::placeholder {
@@ -93,10 +93,10 @@ img {
   background: #f4f4f4;
   color: #242424;
   font-family: Neue Montreal;
-  font-size: 14px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.5; /* 150% */
+  line-height: 1.2;
 }
 .footer-text-2 {
   color: #c6cdd1;
@@ -143,7 +143,8 @@ img {
   line-height: 18px; /* 128.571% */
   letter-spacing: -0.28px;
 }
-
+@media screen and (min-width: 375px) {
+}
 @media screen and (min-width: 768px) {
   .footer-container {
     max-width: 704px;
@@ -171,7 +172,8 @@ img {
   }
   .footer-btn {
     padding: 12px 157px;
-    font-size: 16px;
+    font-size: 18px;
+    line-height: 1.5;
   }
   .footer-text-1 {
     font-size: 18px;
@@ -207,6 +209,11 @@ img {
   }
   .footer-title {
     min-width: 554px;
+  }
+  .footer-btn {
+    padding: 12px 157px;
+    font-size: 16px;
+    line-height: 1.6;
   }
   .footer-section-2 {
     display: flex;
